	  which decrements the lockcount on the wrong TCB.  The failure case
	  that I saw was that pre-emption got disabled in the IDLE thread,
	  locking up the whole system.
	* sched/sched_waitpid.c:  Use SIGCHLD instead of a semaphore.  This
	  is a much more spec-compliant implemenation.  However, there are
	  some issues with overruning signals because NuttX does not support
	  queueing of signals (POSIX does not require it).  I think it may
	  need to.
	* sched/sched_waitid.c and sched_wait.c:  Add support for waitid()
	  and wait().  See issues with waitpid() above.
	* include/nuttx/fs/fs.h and fs/fs_files.c:  Add a dup() method to
	  the struct mountpt_operations.  When dup'ing a file that resides
	  on a mounted volume, let the file system's dup() method do the
	  work.
	* fs/romfs/fs_romfs.c: Implemented the dup() method for the ROMFS
	  file system.
	* fs/fat/fs_fat32.c, fs/nxffs/nxffs_initialize, and
	  fs/nfs/nfs_vfsops.c:  Add hooks for dup() method (not yet
	  implemented).
	* fs/romfs:  Remove the rf_open flag.  It looks good, but actually
	  does nothing.
	* fs/fat:  Remove the ff_open flag.  Same story as for the ROMFS
	  rf_open flag.
	* fs/fat/fs_fat32.c, fs/nxffs/nxffs_initialize, and
	  fs/nfs/nfs_vfsops.c:  Completed implementation of the dup() methods.
	  There is still no good test available.
	* sched/sig_timedwait.c:  sigtimedwait() would return a bad signal
	  number if the signal was already pending when the function was
	  called.
	* configs/ubw32/scripts:  All common linker scripts moved to this
	  scripts sub-directory
	* configs/ubw32/ostest:  Configuration configured to use the
	  kconfig-frontends tools.
	* arch/mips/src/mips32/up_vfork.c, up_vfork.h, and vfork.S:
	  Implement vfork() for MIPS32 (no floating point support)
	* configs/ubw32/ostest: Enable the vfork() test.
	* fs/binfs:  Move apps/builtin/binfs.c to fs/binfs/fs_binfs.c
	  CONFIG_APPS_BINDIR rename CONFIG_FS_BINFS